--- a/src/app/schedule/schedule.component.scss
+++ b/src/app/schedule/schedule.component.scss
@@ -18,17 +18,24 @@ list-style-type: none;
 }
 li.current{
     border: 1px solid forestgreen !important;
-    color: forestgreen;
+    border-left: 4px solid forestgreen !important;
+    color: forestgreen !important;
 }
 li.completed{
-    color:#777;
+   
+    border: 1px solid #ccc !important;
+    border-left: 4px solid #ccc !important;
+    color: #777 !important;
 }
 li.displaying{
    
     margin-bottom: 0.5em;
-    padding: 0.2em;
+    padding: 0.5em;
     padding-left: 0em;
-    border: 1px solid #ccc;
+    border: 1px solid #666;
+    border-left: 4px solid #666;
+    font-size: 0.9em;
+    color: #666;
     display: flex;
 
     .foreignKey{
@@ -42,6 +49,12 @@ li.displaying{
     }
     .date{
         width: 10em;
+    }
+    .status{
+        padding-right: 3em;
+        span{
+            font-size: 0.8em;
+        }
     }
     .edit{
         a{
@@ -59,8 +72,12 @@ li.displaying{
         }
     }
     .delete{
-        margin-left: 5em;
+        margin-left: 6em;
+        margin-right: 1em;
+        
+        
     }
+
 }
 li.editing{
     margin-bottom: 0.5em;
@@ -77,7 +94,10 @@ li.editing{
         align-items: center;
         padding: 0em;
         display: flex;
+
+        
     }
+   
     .foreignKey{
        
         width: 10em;
@@ -106,7 +126,51 @@ li.editing{
             color: goldenrod;
             
         }
+
+     
     }
+    
 
 
+}
+.adding{
+    form{
+        display: flex;
+        align-items: flex-start;
+        margin-top: 1em;
+        margin-left: 3em;
+    }
+    .quantity{
+        width: 3em;
+        margin-left: 1em;
+        mat-form-field{
+            width: 100%;
+            mat-select{
+                width: 100%;
+            }
+        }
+    }
+    .date{
+        margin-left: 1em;
+    }
+    .hour{
+        margin-left: 1em;
+        width: 3em;
+        mat-form-field{
+            width: 100%;
+            mat-select{
+                width: 100%;
+            }
+        }
+    }
+    .minute{
+        margin-left: 1em;
+        width: 3em;
+        mat-form-field{
+            width: 100%;
+            mat-select{
+                width: 100%;
+            }
+        }
+    }
 }
