--- a/src/app/entities/entities.component.scss
+++ b/src/app/entities/entities.component.scss
@@ -3,8 +3,11 @@ h2{
     text-transform: capitalize;
     margin-bottom: 0em;
 }
-
+.adding{
+    margin-top: 1em;
+}
 .addentries{
+    
     form{
         display: flex;
         align-items: flex-start;
