load current instance works

--- a/src/app/current/current.component.html
+++ b/src/app/current/current.component.html
@@ -73,6 +73,11 @@
 
 
     </ul>
+
+
+    <button mat-raised-button (click)="loadCurrentScheduleInstance()">
+      load instance
+    </button>
   </ng-container>
 
 </ng-container>
