--- a/src/app/current/current.component.html
+++ b/src/app/current/current.component.html
@@ -1,83 +1,22 @@
 <h2>Current</h2>
 
-<ng-container *ngIf="(current$|async) as item">
+<ng-container *ngIf="(scheduleItem$|async) as scheduleItem">
   <ng-template #noitem>
     No current item found.
   </ng-template>
-  <ng-container *ngIf="item.start; else noitem">
-    <ul>
+  <ng-container *ngIf="scheduleItem.start; else noitem">
 
-
-
-
-      <ng-container *ngFor="let field of config.fields">
-
-        <ng-container *ngIf="field.foreignKey">
-          <ng-container *ngIf="foreignKeyEntitiesIdMap[field.foreignKey]">
-            <li [ngClass]="selectorentity">
-              <label>
-                <span>{{field.name}}</span>
-              </label>
-              <div>
-                <ng-container *ngIf="item[field.name] as id">
-
-                  <span>
-                    {{foreignKeyEntitiesIdMap[field.foreignKey][id][field.label]}}</span>
-                </ng-container>
-                <ng-container *ngIf="!item[field.name]">
-                  <span>any</span>
-                </ng-container>
-              </div>
-            </li>
-          </ng-container>
-        </ng-container>
-
-
-        <ng-container *ngIf="field.type==='quantity'">
-          <li>
-            <label>
-              <span>{{field.name}}</span>
-            </label>
-            <div><span>{{item[field.name]}}</span></div>
-          </li>
-        </ng-container>
-
-      </ng-container>
-
-      <li class="end">
-
-        <label>
-          <span>ends</span>
-        </label>
-
-        <div>
-          <span *ngIf="item.end">
-            {{item.end.format('M/DD/YYYY HH:mm')}}
-          </span>
-        </div>
-      </li>
-
-      <li class="start">
-
-        <label>
-          <span>started</span>
-        </label>
-
-        <div>
-          <span>
-            {{item.start.format('M/DD/YYYY HH:mm')}}
-          </span>
-        </div>
-      </li>
-
-
-
-    </ul>
+    <app-schedule-item-details [scheduleItem$]="scheduleItem$" [scheduleConfig]="config"
+      [foreignKeysEntitiesIdMap]="foreignKeysEntitiesIdMap"></app-schedule-item-details>
 
 
     <button mat-raised-button (click)="loadCurrentScheduleInstance()">
-      load instance
+      reload instance
     </button>
+
+    <app-instance-display-basic [scheduleInstance$]="scheduleInstance$" [entityConfig]="config">
+    </app-instance-display-basic>
+
   </ng-container>
 
 </ng-container>
